--- a/_04_ThymeLeaf/baitap/product_management/build.gradle
+++ b/_04_ThymeLeaf/baitap/product_management/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.3.2'
     implementation group: 'org.thymeleaf', name: 'thymeleaf-spring4', version: '3.0.9.RELEASE'
     compile group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '2.5.2'
-
+    implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.10.Final'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
 
 }
