--- a/_13_I18N/baitap/baitap/src/main/resources/msg/language.properties
+++ b/_13_I18N/baitap/baitap/src/main/resources/msg/language.properties
@@ -1,1 +1,7 @@
 list.title=List Customer
+list.id=ID
+list.name=Name
+list.dob=Date of birth
+list.phone=Phone
+list.actiondelete=Delete
+list.actionedit=Edit
